--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mustache": "^3.0.1",
     "ncp": "^2.0.0",
     "showdown": "^1.9.0",
-    "word-wrap": "^1.2.3"
+    "word-wrap": "^1.2.3",
+    "mem": ">=4.0.0"
   }
 }
